[tool.poetry]
name = "square-root-calculator"
version = "0.1.0"
description = "A square root calculator using Python, pytest and Babylonian method."
authors = ["garibaldiviolin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
